Project

General

Profile

Actions

Bug #12238

closed

stabs: smatch errors

Added by Toomas Soome over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
tools - gate/build tools
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build errors on sparc:

    /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../stabs.c:87 debug() error: unchecked function return 'strcpy'
    /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../stabs.c:88 debug() error: unchecked function return 'strcat'
    /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../stabs.c:120 get_line() error: unchecked function return 'sleep'
    /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../stabs.c:242 parseline() error: unchecked function return 'tdefdecl'
    /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../stabs.c:387 tagdecl() error: unchecked function return 'soudef'
    /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../stabs.c:390 tagdecl() error: unchecked function return 'soudef'

tools/stabs build is ok.

Actions #1

Updated by Toomas Soome over 3 years ago

  • Description updated (diff)
Actions #2

Updated by Electric Monk over 3 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 12661a24a0babe84d0a1b8d1fe46fb61dcc5011e

commit  12661a24a0babe84d0a1b8d1fe46fb61dcc5011e
Author: Toomas Soome <tsoome@me.com>
Date:   2020-01-25T07:25:59.000Z

    12238 stabs: smatch errors
    Reviewed by: Matthias Scheler <mscheler@tintri.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF